--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=8080
 server.error.include-message=always
 
+spring.security.user.name=user
+spring.security.user.password=password
+
 spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
